Script: unthrottle ingest templates #70272
Scripts in ingest pipelines may be throttled on startup
or when beats starts up. This causes pipelines to be
stuck in a broken state.

Pipelines with many mustache templates are particularly impacted.

Removes the compilation rate limit for ingest templates by
creating a new context, `ingest_template`, with an unlimited
compilation rate limit.

Fixes: #64595
Backport: 9370b1c